<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/rl_attention_no_live" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_width="fill_parent" android:layout_height="150.0dip" android:src="@drawable/hall_no_live_bg" android:scaleType="centerCrop" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
            <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_title1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/attention_title1" />
            <TextView android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/attention_title2" android:layout_alignBottom="@+id/tv_title1" />
            <Button android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attention_title3" />
        </LinearLayout>
    </RelativeLayout>
</merge>