<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/black" android:id="@+id/item_tv_search_music_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="明天你好" />
        <TextView android:textColor="@color/swiperefresh_color1" android:id="@+id/item_tv_search_music_author" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="牛奶@咖啡" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/text_size_15" android:id="@+id/item_tv_search_music_time" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3.39" />
        <com.dd.CircularProgressButton android:textColor="@color/white" android:id="@+id/item_btn_search_music_download" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" app:cpb_textComplete="@string/select" app:cpb_textIdle="@string/download" app:cpb_textError="@string/downloadError" app:cpb_cornerRadius="48.0dip" />
    </LinearLayout>
</RelativeLayout>