<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_home_page_index" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@+id/rl_home_pager_yi_order" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="70.0dip">
            <TextView android:textColor="@color/gray" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/ticketorder" android:layout_centerVertical="true" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
                <com.weilian.phonelive.widget.AvatarView android:id="@+id/av_home_page_order1" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:layout_centerVertical="true" />
                <com.weilian.phonelive.widget.AvatarView android:id="@+id/av_home_page_order2" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:layout_centerVertical="true" />
                <com.weilian.phonelive.widget.AvatarView android:id="@+id/av_home_page_order3" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:layout_centerVertical="true" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/me_next" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/number" style="@style/home_user_info_item_labe" />
                <TextView android:id="@+id/tv_home_page_num" style="@style/home_user_info_item_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/sign" style="@style/home_user_info_item_labe" />
                <TextView android:id="@+id/tv_home_page_sign2" style="@style/home_user_info_item_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>