<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@+id/rl_live_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ksy.recordlib.service.view.CameraGLSurfaceView android:id="@+id/camera_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_top_menu" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip">
            <ImageView android:layout_width="110.0dip" android:layout_height="40.0dip" android:src="@drawable/live_type_bg" android:scaleType="centerCrop" />
            <LinearLayout android:id="@+id/ll_live_room_info" android:layout_width="110.0dip" android:layout_height="35.0dip" android:layout_centerVertical="true">
                <com.weilian.phonelive.widget.AvatarView android:id="@+id/iv_live_emcee_head" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/ic_launcher" app:border_width="2.0dip" app:border_color="@color/white" />
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip">
                    <TextView android:textSize="@dimen/text_size_10" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="直播Live" />
                    <TextView android:textSize="@dimen/text_size_10" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_live_num" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <com.weilian.phonelive.widget.HorizontalListView android:id="@+id/hl_room_user_list" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_centerVertical="true" />
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_yp_labe" android:background="@drawable/btn_ticket_labe" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_marginLeft="-10.0dip" android:layout_marginTop="70.0dip">
        <TextView android:textColor="@color/actionbarbackground" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/yingpiao" />
        <TextView android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_yingpiao_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" />
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_yingpiao_check" android:scaleType="centerCrop" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_show_gift_animator" android:layout_width="270.0dip" android:layout_height="100.0dip" android:layout_marginTop="200.0dip" />
    <ListView android:id="@+id/lv_live_room" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginBottom="70.0dip" android:divider="@null" android:layout_alignParentBottom="true" />
    <include layout="@layout/view_live_music_lrc" />
    <RelativeLayout android:id="@+id/rl_start_live_bg" android:background="@drawable/create_room_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@+id/iv_live_exit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_btn_x_h" android:layout_alignParentRight="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="150.0dip" android:layout_centerHorizontal="true">
            <EditText android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/et_start_live_title" android:background="@null" android:layout_width="200.0dip" android:layout_height="wrap_content" android:hint="@string/createedittexthint" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <ImageView android:id="@+id/iv_live_share_weibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_weibo" />
                <ImageView android:id="@+id/iv_live_share_timeline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_timeline" />
                <ImageView android:id="@+id/iv_live_share_wechat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_wechat" />
                <ImageView android:id="@+id/iv_live_share_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_qq" />
                <ImageView android:id="@+id/iv_live_share_qqzone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/room_qqzone" />
            </LinearLayout>
            <Button android:textColor="@color/backgroudcolor" android:id="@+id/btn_start_live" android:background="@drawable/me_button" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/startLive" />
        </LinearLayout>
    </RelativeLayout>
    <include layout="@layout/view_show_start_live_button_menu" />
    <RelativeLayout android:id="@+id/rl_livestop" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/text_size_25" android:textColor="@color/backgroudcolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/liveend" android:layout_centerHorizontal="true" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="120.0dip" android:layout_centerHorizontal="true">
            <TextView android:textColor="@color/white" android:id="@+id/tv_live_end_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <Button android:textColor="@color/backgroudcolor" android:id="@+id/btn_back_index" android:background="@drawable/me_button" android:layout_width="220.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:text="@string/gobackindex" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>