<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="300.0dip" android:layout_height="380.0dip">
        <RelativeLayout android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@+id/ib_show_dialog_back" android:background="@drawable/room_pop_up_shut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <com.weilian.phonelive.widget.AvatarView android:layout_gravity="center" android:id="@+id/av_show_dialog_u_head" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginTop="20.0dip" />
        <com.weilian.phonelive.widget.AvatarView android:id="@+id/av_show_dialog_order_first_u_head" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" />
        <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/black" android:gravity="center" android:id="@+id/tv_show_dialog_u_name" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            <ImageView android:id="@+id/iv_show_dialog_sex" android:layout_width="wrap_content" android:layout_height="@dimen/space_25" />
            <ImageView android:id="@+id/iv_show_dialog_level" android:layout_width="32.0dip" android:layout_height="@dimen/space_25" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <ImageView android:layout_width="10.0dip" android:layout_height="20.0dip" android:src="@drawable/live_map_dark" />
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/gray" android:gravity="center" android:id="@+id/tv_show_dialog_u_address" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/default_address" />
        </LinearLayout>
        <TextView android:textSize="@dimen/text_size_15" android:layout_gravity="center" android:id="@+id/tv_show_dialog_u_sign" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/black" android:id="@+id/tv_show_dialog_u_fllow_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="关注:0" />
                <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/black" android:id="@+id/tv_show_dialog_u_fans" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="粉丝:0" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/swiperefresh_color3" android:id="@+id/tv_show_dialog_u_send_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="送出:0" />
                <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/black" android:id="@+id/tv_show_dialog_u_ticket" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yingpiaoshu" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="15.0dip" style="@style/v_line" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/global" android:gravity="center" android:id="@+id/tv_show_dialog_u_home_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>